k8s-manifests/overlays/staging/superapp/client/utility/patch/qa-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: utility
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: utility
        image: harbor.cbe.com.et/cbe-superapp/utility-qa:latest
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: utility-parser
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: utility-parser
        image: harbor.cbe.com.et/cbe-superapp/utility-parser-qa:latest
        imagePullPolicy: Always
