k8s-manifests/overlays/staging/superapp/client/utility/patch/route-patch.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: utility-route
spec:
  path: /api/v1/cbesuperapp/utility
  to:
    name: utility-qa
    weight: 100
    kind: Service
  host: qaapisuperapp.cbe.com.et
  port:
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: utility-parser-route
spec:
  path: /api/v1/cbesuperapp/utility_parser
  to:
    name: utility-parser-qa
    weight: 100
    kind: Service
  host: qaapisuperapp.cbe.com.et
  port:
    targetPort: 8080
